<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/lblConta"
                style="@style/AppTheme.FonteHalvetica.Branco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/moc_conta"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="@+id/lblTituloConta"
                app:layout_constraintTop_toBottomOf="@+id/lblTituloConta" />

            <TextView
                    android:id="@+id/lblTituloConta"
                    style="@style/AppTheme.FonteHalvetica.Branco"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/conta"
                    android:textSize="12sp"
                    android:layout_marginStart="18dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="20dp"
                    app:layout_constraintTop_toBottomOf="@id/toolbar"/>

            <TextView
                android:id="@+id/lblTituloSaldo"
                style="@style/AppTheme.FonteHalvetica.Branco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="@string/saldo"
                app:layout_constraintStart_toStartOf="@+id/lblConta"
                app:layout_constraintTop_toBottomOf="@+id/lblConta" />

            <TextView
                android:id="@+id/lblValorSaldo"
                style="@style/AppTheme.FonteHalveticaLight.Branco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="17dp"
                android:text="@string/moc_valor_dinheiro"
                android:textSize="25sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/lblTituloSaldo"
                app:layout_constraintTop_toBottomOf="@+id/lblTituloSaldo" />

            <android.support.v7.widget.Toolbar
                app:titleTextColor="@color/branco"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="@string/moc_nome_usuario" />


            <!--<android.support.design.widget.CollapsingToolbarLayout-->
                <!--android:id="@+id/collapsingToolbarLayout"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginTop="8dp"-->
                <!--app:titleEnabled="true"-->
                <!--app:expandedTitleTextAppearance="@android:color/transparent"-->
                <!--app:layout_constraintEnd_toEndOf="parent"-->
                <!--app:layout_constraintStart_toStartOf="parent"-->
                <!--app:layout_constraintTop_toTopOf="parent"-->
                <!--app:layout_scrollFlags="scroll|exitUntilCollapsed">-->


            <!--</android.support.design.widget.CollapsingToolbarLayout>-->


        </android.support.constraint.ConstraintLayout>


    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context="br.com.rafael.main.CurrencyActivity">

            <TextView
                android:id="@+id/lblTituloRecentes"
                style="@style/AppTheme.FonteHalvetica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="8dp"
                android:text="@string/recentes"
                android:textSize="17sp" />


            <android.support.v7.widget.RecyclerView
                    tools:listitem="@layout/list_item_currency"
                android:id="@+id/recyclerViewCurrency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp" />



        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
